Update pictures.java